// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should generate config file 1`] = `
Array [
  Array [
    "Creating new config..",
  ],
  Array [
    "Config created!",
  ],
]
`;

exports[`Should generate config file for functions 1`] = `
Array [
  Array [
    "Creating new config..",
  ],
  Array [
    "Creating new config for function deployment..",
  ],
  Array [
    "Config created!",
  ],
]
`;

exports[`Should generate the config with parameters 1`] = `
Array [
  Array [
    "Creating new config..",
  ],
  Array [
    "Mode changed to",
    "non-interactive",
  ],
  Array [
    "Setting",
    "domain",
    "to",
    "test123.dev",
  ],
  Array [
    "Setting",
    "port",
    "to",
    "1234",
  ],
  Array [
    "Setting",
    "name",
    "to",
    "test name 123",
  ],
  Array [
    "Setting",
    "project",
    "to",
    "give-project-name",
  ],
  Array [
    "Setting",
    "restart",
    "to",
    "unless-stopped",
  ],
  Array [
    "Setting",
    "hostname",
    "to",
    "test123.dev",
  ],
  Array [
    "Config created!",
  ],
]
`;
